# nikita

./: .gitignore  Cargo.toml  README.md
dep-installer/: Cargo.toml  Shuttle.toml  build.rs
src/: main.rs
src/commands/: mod.rs
src/commands/misc/: help.rs  ping.rs
src/commands/music/: clear.rs  join.rs  leave.rs  list.rs  loop.rs  mod.rs  pause.rs  play.rs  resume.rs  skip.rs
src/events/: serenity.rs  songbird.rs
src/handler/: commands.rs
src/handler/events/: guild_member_add.rs  guild_member_remove.rs  join_to_create.rs  mod.rs
src/utils/: http_key.rs  mod.rs  response.rs
