[package]
name = "nikita"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.11.27"
serenity = { version = "0.12.1", default-features = false, features = [
    "cache",
    "client",
    "voice",
    "http",
    "rustls_backend",
    "gateway",
    "model",
] }
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
songbird = { version = "0.4.1", features = [
    "builtin-queue",
    "serenity",
    "driver",
] }
symphonia = { version = "0.5.4", features = [
    "aac",
    "mp3",
    "isomp4",
    "alac",
    "adpcm",
    "flac",
    "mpa",
] }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"

[workspace]
members = ["."]
exclude = ["dep-installer"]
